element overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -68,10 +68,6 @@
 	padding-bottom: 3rem;
 }
 
-.grid-container * {
-	max-width: 45ch;
-}
-
 /* in a flow container, add a margin-top gap to all children except first-child */
 .flow > *:where(:not(:first-child)) {
 	margin-top: var(--flow-gap, 1rem);
@@ -332,6 +328,7 @@ h6 {
 	font-family: var(--ff-sans-normal);
 	line-height: var(--fs-600);
 	color: hsl(var(--clr-accent));
+	max-width: 50ch;
 }
 
 @media (min-width: 45em) {
